# alchina

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml
alchina/: classifiers.py  clusters.py  diagnosis.py  exceptions.py  metrics.py  optimizers.py  preprocessors.py  regressors.py  selection.py  utils.py
alchina/classifiers/: __init__.py  knn.py  linear.py
alchina/clusters/: __init__.py  kmeans.py
alchina/optimizers/: __init__.py  gradient_descent.py
alchina/preprocessors/: __init__.py  data.py  pca.py
alchina/regressors/: __init__.py  linear.py
examples/: classification.py  clusters.py  diagnosis.py  linear.py  logistic.py  metrics.py  regression.py  selection.py
tests/: test_alchina.py  test_classifiers.py  test_clusters.py  test_diagnosis.py  test_metrics.py  test_optimizers.py  test_preprocessors.py  test_regressors.py  test_selection.py  test_utils.py
tests/classifiers/: test_knn.py  test_linear_classifiers.py
tests/clusters/: test_kmeans.py
tests/optimizers/: test_gradient_descent.py
tests/preprocessors/: test_data.py  test_pca.py
tests/regressors/: test_linear_regressors.py
