[tool.poetry]
name = "alchina"
version = "0.1.0"
description = ""
authors = ["matthieu <matthieu.gouel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
matplotlib = "^3.0"
numpy = "^1.16"
scikit-learn = "^0.20.3"
pandas = "^0.24.2"
pytest-cov = "^2.6"
bump2version = "^0.5.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.700.0"
coveralls = "^1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
