[tool.poetry]
name = "alchina"
version = "0.1.1"
description = "Machine Learning framework"
readme = "README.md"
license = "MIT"
authors = ["matthieu Gouel <matthieu.gouel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.0"
numpy = "^1.16"
pandas = "^0.24.2"
scikit-learn = "^0.20.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
bump2version = "^0.5.10"
coveralls = "^1.7"
flake8 = "^3.7"
mypy = "^0.700.0"
pytest = "^3.0"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
